--- a/download.html
+++ b/download.html
@@ -187,10 +187,10 @@
             </div>
             <div class="platform-card__actions">
               <div class="platform-card__buttons">
-                <a href="https://play.google.com/store/apps/details?id=com.spixi" target="_blank" rel="noopener noreferrer" class="platform-card__store-link">
+                <a href="https://play.google.com/store/apps/details?id=com.ixilabs.spixi" target="_blank" rel="noopener noreferrer" class="platform-card__store-link">
                   <img src="assets/images/google-play.png" alt="Get it on Google Play" class="platform-card__store-badge">
                 </a>
-                <a href="https://github.com/ixian-platform/Spixi/releases/latest/download/spixi.apk" class="platform-card__download-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/ixian-platform/Spixi/releases/download/v0.9.14/Spixi-v0.9.14-Android.apk" class="platform-card__download-link" target="_blank" rel="noopener noreferrer">
                   <svg class="platform-card__icon" width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M7 10l5 5 5-5M12 15V3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>
@@ -215,7 +215,7 @@
               <p class="card-md__body">Install Spixi from the App Store on your iPhone or iPad.</p>
             </div>
             <div class="platform-card__actions">
-              <a href="https://apps.apple.com/app/spixi/id123456789" target="_blank" rel="noopener noreferrer" class="platform-card__store-link">
+              <a href="https://apps.apple.com/us/app/spixi-private-chat-wallet/id6667121792" target="_blank" rel="noopener noreferrer" class="platform-card__store-link">
                 <img src="assets/images/app-store.png" alt="Download on the App Store" class="platform-card__store-badge">
               </a>
               <p class="platform-card__requirement">iOS 15 or newer</p>
@@ -241,7 +241,7 @@
               <p class="card-md__body">Desktop Spixi with all key features, including chat, wallet and Mini Apps.</p>
             </div>
             <div class="platform-card__actions">
-              <a href="https://github.com/ixian-platform/Spixi/releases/latest/download/spixi-windows.exe" class="platform-card__download-link" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/ixian-platform/Spixi/releases/download/v0.9.14/Spixi-v0.9.14-Win.zip" class="platform-card__download-link" target="_blank" rel="noopener noreferrer">
                 <svg class="platform-card__icon" width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M7 10l5 5 5-5M12 15V3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
