--- a/mini-apps.html
+++ b/mini-apps.html
@@ -13,6 +13,9 @@
   <meta name="description" content="Discover Mini Apps for Spixi - curated tools and games that run directly inside chats. Browse featured apps or submit your own." />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#081016" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="assets/icons/spixi-logo.svg">
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="Spixi" />
