--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,6 +14,9 @@
   <meta name="description" content="How IXI Labs collects, uses, and protects information when you use the Spixi app and website." />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#081016" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="assets/icons/spixi-logo.svg">
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="Spixi" />
