--- a/download.html
+++ b/download.html
@@ -14,6 +14,9 @@
   <meta name="description" content="Get Spixi for Android, iOS, macOS and Windows. Secure messaging with an integrated IXI wallet and Mini Apps." />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#081016" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="assets/icons/spixi-logo.svg">
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="Spixi" />
