--- a/help-center.html
+++ b/help-center.html
@@ -15,6 +15,9 @@
   <meta name="description" content="Get Spixi guides, FAQs, and troubleshooting for installation, Mini Apps, wallet setup, and privacy." />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#081016" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="assets/icons/spixi-logo.svg">
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="Spixi" />
