--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <meta name="description" content="Spixi is a privacy-first messenger with an integrated IXI wallet and Mini Apps - chat, pay, and run tools and games without leaving the conversation." />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#081016" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="assets/icons/spixi-logo.svg">
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="Spixi" />
