--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -14,6 +14,9 @@
   <meta name="description" content="Legal terms and conditions for using Spixi and related services." />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#081016" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="assets/icons/spixi-logo.svg">
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="Spixi" />
