updated featured apps section

--- a/mini-apps.html
+++ b/mini-apps.html
@@ -144,116 +144,10 @@
     <div class="featured__header">
       <p class="featured__overline">Curated by Spixi Team</p>
       <h2 class="featured__title">Featured Mini Apps</h2>
-    </div>
-    
+    </div>    
+
     <div class="featured__carousel">
-      <!-- App Card 1: AI Assistant -->
-      <article class="app-card">
-        <div class="app-card__header">
-          <img class="app-card__icon" src="assets/images/ai-assistant.png" alt="AI Assistant">
-          <span class="badge">AI</span>
-        </div>
-        <div class="app-card__content">
-          <div class="app-card__details">
-            <div class="app-card__meta">
-              <h3 class="app-card__title">AI Assistant</h3>
-              <p class="app-card__publisher">Serg</p>
-            </div>
-            <p class="app-card__description">Local LLM accessed and charged over Spixi and Ixian Platform.</p>
-          </div>
-        </div>
-        <div class="app-card__footer">
-          <a href="#" class="btn btn-sm btn-outlined">
-            <span class="btn__label">Try in Spixi</span>
-          </a>
-          <a href="#" class="app-card__github" target="_blank" rel="noopener noreferrer" aria-label="View on GitHub">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256" fill="currentColor">
-              <path d="M208.31,75.68A59.78,59.78,0,0,0,202.93,28,8,8,0,0,0,196,24a59.75,59.75,0,0,0-48,24H108A59.75,59.75,0,0,0,60,24a8,8,0,0,0-6.93,4,59.78,59.78,0,0,0-5.38,47.68A58.14,58.14,0,0,0,40,104v8a56.06,56.06,0,0,0,48.44,55.47A39.8,39.8,0,0,0,80,192v8H72a24,24,0,0,1-24-24A40,40,0,0,0,8,136a8,8,0,0,0,0,16,24,24,0,0,1,24,24,40,40,0,0,0,40,40h8v16a8,8,0,0,0,16,0V192a24,24,0,0,1,48,0v40a8,8,0,0,0,16,0V192a39.8,39.8,0,0,0-8.44-24.53A56.06,56.06,0,0,0,200,112v-8A58.14,58.14,0,0,0,208.31,75.68ZM184,112a40,40,0,0,1-40,40H112a40,40,0,0,1-40-40v-8a41.74,41.74,0,0,1,6.9-22.48A8,8,0,0,0,80,73.55a43.81,43.81,0,0,1,.79-33.58,43.88,43.88,0,0,1,32.32,20.06A8,8,0,0,0,119.82,64h16.36a8,8,0,0,0,6.71-3.97,43.88,43.88,0,0,1,32.32-20.06A43.81,43.81,0,0,1,176,73.55a8,8,0,0,0,1.1,7.97A41.74,41.74,0,0,1,184,104Z"/>
-            </svg>
-          </a>
-        </div>
-      </article>
-
-      <!-- App Card 2: IXIJump -->
-      <article class="app-card">
-        <div class="app-card__header">
-          <img class="app-card__icon" src="assets/images/ixijump.png" alt="IXIJump">
-          <span class="badge">Games</span>
-        </div>
-        <div class="app-card__content">
-          <div class="app-card__details">
-            <div class="app-card__meta">
-              <h3 class="app-card__title">IXIJump</h3>
-              <p class="app-card__publisher">Spoony</p>
-            </div>
-            <p class="app-card__description">A fast-paced tapping game built for Spixi. Simple and addictive.</p>
-          </div>
-        </div>
-        <div class="app-card__footer">
-          <a href="#" class="btn btn-sm btn-outlined">
-            <span class="btn__label">Try in Spixi</span>
-          </a>
-          <a href="#" class="app-card__github" target="_blank" rel="noopener noreferrer" aria-label="View on GitHub">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256" fill="currentColor">
-              <path d="M208.31,75.68A59.78,59.78,0,0,0,202.93,28,8,8,0,0,0,196,24a59.75,59.75,0,0,0-48,24H108A59.75,59.75,0,0,0,60,24a8,8,0,0,0-6.93,4,59.78,59.78,0,0,0-5.38,47.68A58.14,58.14,0,0,0,40,104v8a56.06,56.06,0,0,0,48.44,55.47A39.8,39.8,0,0,0,80,192v8H72a24,24,0,0,1-24-24A40,40,0,0,0,8,136a8,8,0,0,0,0,16,24,24,0,0,1,24,24,40,40,0,0,0,40,40h8v16a8,8,0,0,0,16,0V192a24,24,0,0,1,48,0v40a8,8,0,0,0,16,0V192a39.8,39.8,0,0,0-8.44-24.53A56.06,56.06,0,0,0,200,112v-8A58.14,58.14,0,0,0,208.31,75.68ZM184,112a40,40,0,0,1-40,40H112a40,40,0,0,1-40-40v-8a41.74,41.74,0,0,1,6.9-22.48A8,8,0,0,0,80,73.55a43.81,43.81,0,0,1,.79-33.58,43.88,43.88,0,0,1,32.32,20.06A8,8,0,0,0,119.82,64h16.36a8,8,0,0,0,6.71-3.97,43.88,43.88,0,0,1,32.32-20.06A43.81,43.81,0,0,1,176,73.55a8,8,0,0,0,1.1,7.97A41.74,41.74,0,0,1,184,104Z"/>
-            </svg>
-          </a>
-        </div>
-      </article>
-
-      <!-- App Card 3: Tic Tac Toe -->
-      <article class="app-card">
-        <div class="app-card__header">
-          <img class="app-card__icon" src="assets/images/tictactoe.png" alt="Tic Tac Toe">
-          <span class="badge">Games</span>
-        </div>
-        <div class="app-card__content">
-          <div class="app-card__details">
-            <div class="app-card__meta">
-              <h3 class="app-card__title">Tic Tac Toe</h3>
-              <p class="app-card__publisher">IXI Labs</p>
-            </div>
-            <p class="app-card__description">Challenge friends to a quick game and settle debates instantly.</p>
-          </div>
-        </div>
-        <div class="app-card__footer">
-          <a href="#" class="btn btn-sm btn-outlined">
-            <span class="btn__label">Try in Spixi</span>
-          </a>
-          <a href="#" class="app-card__github" target="_blank" rel="noopener noreferrer" aria-label="View on GitHub">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256" fill="currentColor">
-              <path d="M208.31,75.68A59.78,59.78,0,0,0,202.93,28,8,8,0,0,0,196,24a59.75,59.75,0,0,0-48,24H108A59.75,59.75,0,0,0,60,24a8,8,0,0,0-6.93,4,59.78,59.78,0,0,0-5.38,47.68A58.14,58.14,0,0,0,40,104v8a56.06,56.06,0,0,0,48.44,55.47A39.8,39.8,0,0,0,80,192v8H72a24,24,0,0,1-24-24A40,40,0,0,0,8,136a8,8,0,0,0,0,16,24,24,0,0,1,24,24,40,40,0,0,0,40,40h8v16a8,8,0,0,0,16,0V192a24,24,0,0,1,48,0v40a8,8,0,0,0,16,0V192a39.8,39.8,0,0,0-8.44-24.53A56.06,56.06,0,0,0,200,112v-8A58.14,58.14,0,0,0,208.31,75.68ZM184,112a40,40,0,0,1-40,40H112a40,40,0,0,1-40-40v-8a41.74,41.74,0,0,1,6.9-22.48A8,8,0,0,0,80,73.55a43.81,43.81,0,0,1,.79-33.58,43.88,43.88,0,0,1,32.32,20.06A8,8,0,0,0,119.82,64h16.36a8,8,0,0,0,6.71-3.97,43.88,43.88,0,0,1,32.32-20.06A43.81,43.81,0,0,1,176,73.55a8,8,0,0,0,1.1,7.97A41.74,41.74,0,0,1,184,104Z"/>
-            </svg>
-          </a>
-        </div>
-      </article>
-
-      <!-- App Card 4: Whiteboard -->
-      <article class="app-card">
-        <div class="app-card__header">
-          <img class="app-card__icon" src="assets/images/whiteboard.png" alt="Whiteboard">
-          <span class="badge">Tools</span>
-        </div>
-        <div class="app-card__content">
-          <div class="app-card__details">
-            <div class="app-card__meta">
-              <h3 class="app-card__title">Whiteboard</h3>
-              <p class="app-card__publisher">IXI Labs</p>
-            </div>
-            <p class="app-card__description">Draw together in real time. Share doodles and notes with friends.</p>
-          </div>
-        </div>
-        <div class="app-card__footer">
-          <a href="#" class="btn btn-sm btn-outlined">
-            <span class="btn__label">Try in Spixi</span>
-          </a>
-          <a href="#" class="app-card__github" target="_blank" rel="noopener noreferrer" aria-label="View on GitHub">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256" fill="currentColor">
-              <path d="M208.31,75.68A59.78,59.78,0,0,0,202.93,28,8,8,0,0,0,196,24a59.75,59.75,0,0,0-48,24H108A59.75,59.75,0,0,0,60,24a8,8,0,0,0-6.93,4,59.78,59.78,0,0,0-5.38,47.68A58.14,58.14,0,0,0,40,104v8a56.06,56.06,0,0,0,48.44,55.47A39.8,39.8,0,0,0,80,192v8H72a24,24,0,0,1-24-24A40,40,0,0,0,8,136a8,8,0,0,0,0,16,24,24,0,0,1,24,24,40,40,0,0,0,40,40h8v16a8,8,0,0,0,16,0V192a24,24,0,0,1,48,0v40a8,8,0,0,0,16,0V192a39.8,39.8,0,0,0-8.44-24.53A56.06,56.06,0,0,0,200,112v-8A58.14,58.14,0,0,0,208.31,75.68ZM184,112a40,40,0,0,1-40,40H112a40,40,0,0,1-40-40v-8a41.74,41.74,0,0,1,6.9-22.48A8,8,0,0,0,80,73.55a43.81,43.81,0,0,1,.79-33.58,43.88,43.88,0,0,1,32.32,20.06A8,8,0,0,0,119.82,64h16.36a8,8,0,0,0,6.71-3.97,43.88,43.88,0,0,1,32.32-20.06A43.81,43.81,0,0,1,176,73.55a8,8,0,0,0,1.1,7.97A41.74,41.74,0,0,1,184,104Z"/>
-            </svg>
-          </a>
-        </div>
-      </article>
+      <!-- Featured apps will be loaded here by JavaScript -->
     </div>
 
     <a href="https://apps.spixi.io" class="btn btn-md btn-primary" target="_blank" rel="noopener noreferrer">
@@ -486,6 +380,73 @@
     </div>
   </footer>
 
+  <!-- Toast Notification -->
+  <div id="toast" class="toast">Copied to clipboard</div>
+
+  <!-- Modal Overlay -->
+  <div id="modal-overlay" class="modal-overlay" style="display: none;">
+    <div id="app-modal" class="modal modal--desktop">
+      <!-- App Details Header -->
+      <div class="modal__header">
+        <div class="modal__app-image">
+          <img id="modal-app-icon" src="" alt="App Icon">
+        </div>
+        <div class="modal__details">
+          <div class="modal__meta">
+            <div class="modal__title-row">
+              <h2 id="modal-app-title" class="modal__title">Title</h2>
+              <span id="modal-app-category" class="modal__badge">Category</span>
+            </div>
+            <p id="modal-app-publisher" class="modal__publisher">Publisher</p>
+          </div>
+          <p id="modal-app-description" class="modal__description">Description</p>
+        </div>
+      </div>
+
+      <!-- Content Section -->
+      <div class="modal__content">
+        <div class="modal__container">
+          <!-- Left Column - Manual Instructions -->
+          <div class="modal__left">
+            <h3 class="modal__section-title">Add Manually</h3>
+            <ol class="modal__instructions">
+              <li>Copy the App URL</li>
+              <li>In Spixi, go to Apps → + Add Mini App</li>
+              <li>Paste the link and tap Get from URL</li>
+            </ol>
+            <div class="modal__address-section">
+              <label class="modal__label">App URL</label>
+              <div class="modal__url-container">
+                <span id="modal-app-url" class="modal__url-text">URL-address</span>
+                <button id="copy-url-btn" class="modal__copy-btn" aria-label="Copy URL">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path
+                      d="M8 4v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V7.242a2 2 0 0 0-.602-1.43L16.083 2.57A2 2 0 0 0 14.685 2H10a2 2 0 0 0-2 2Z"
+                      stroke="currentColor" stroke-width="2" />
+                    <path d="M16 18v2a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2h2" stroke="currentColor"
+                      stroke-width="2" />
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <!-- Right Column - QR Code -->
+          <div class="modal__right">
+            <div class="modal__qr-code" id="modal-qr-target"></div>
+            <p class="modal__qr-title">Scan with Spixi</p>
+            <p class="modal__qr-note">*Open this mini app on another device.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Close Button -->
+      <div class="modal__footer">
+        <button id="close-modal-btn" class="modal__close-btn">Close</button>
+      </div>
+    </div>
+  </div>
+
   <!-- Cookie Banner -->
   <div class="cookie-banner" id="cookieBanner">
     <div class="cookie-banner__container">
@@ -550,5 +511,7 @@
   <!-- Scripts -->
   <script src="assets/js/navigation.js"></script>
   <script src="assets/js/cookies.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <script src="assets/js/app.js"></script>
 </body>
 </html>
